# xiaoqing

./: .env.docker.example  .gitignore  0318_汇总计划.md  AGENTS.md  CLAUDE.md  INFRA-REFACTOR-PLAN.md  PLAN-xiaoqing-cognitive-trace.md  QA.md  README.md  RELATION-COGNITION-PLAN.md  TODO.md  YOU_KNOW.md  compose.yaml  package.json  plan.md  video_agent_planning_prompt.md  健康检查.md
.claude/: settings.json
.playwright-cli/: page-2026-03-16T07-17-50-551Z.yml  page-2026-03-16T07-18-59-017Z.yml  page-2026-03-16T07-36-43-760Z.yml  page-2026-03-16T07-45-47-647Z.yml  page-2026-03-16T07-46-06-930Z.yml
backend/: .dockerignore  .env.example  .env.wechat-bot.example  .env.wechat-work.example  .gitignore  Dockerfile  nest-cli.json  package-lock.json  package.json
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs
docs/: INDEX.md  PROJECT-SUMMARY.md  agent-collaboration-protocol.md  architecture-design.md  assistant-architecture-principles.md  cognitive-trace-design.md  context-boundary.md  current-system-boundary.md  debug-trace-design.md  dev-agent-architecture.md  dev-agent-ui-v2-implementation-plan.md  dialogue-regression-standard.md  expression-policy-design.md  frontend-ui-checklist.md  frontend-ui-rules.md  identity-anchor-design.md  intent-policy-regression.md  language-style.md  life-record-design.md  memory-growth-plan.md  plan-task-scheduler-refactor.md  preference-evolution-trigger-guide.md  小晴使用说明.md  (+4 more)
(+727 files in other folders)
