[package]
name = "desktop"
version = "0.1.0"
description = "LongMemory desktop pet - click to open chat"
authors = ["you"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
